tests/miniJava/neg/005841_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { Main java [ 0 ] = 0 ; } }
